helm/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
spec:
  ingressClassName: nginx  
  rules:
    - host: hello-worldapp.com
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: ingress-demo
                port:
                  number: 8080
